<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Appearance">

        <SwitchPreferenceCompat
            android:key="dark_theme"
            android:title="@string/pref_dark_theme_title"
            android:summary="@string/pref_dark_theme_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Download">

        <SwitchPreferenceCompat
            android:key="wifi_only_downloads"
            android:title="@string/pref_wifi_only_title"
            android:summary="@string/pref_wifi_only_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Storage">

        <Preference
            android:key="storage_used"
            android:title="@string/pref_storage_used_title"
            android:selectable="false" />

        <Preference
            android:key="delete_all_downloads"
            android:title="@string/pref_delete_all_title"
            android:summary="@string/pref_delete_all_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="About">

        <Preference
            android:key="support_developer"
            android:title="@string/pref_support_title"
            android:summary="@string/pref_support_summary" />

        <Preference
            android:key="app_version"
            android:title="@string/pref_version_title"
            android:selectable="false" />

        <Preference
            android:title="TRICARE Manuals"
            android:summary="Unofficial app for offline TRICARE manual access.\nNot affiliated with DoD or TRICARE."
            android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
